crates/next-custom-transforms/tests/errors/server-actions/server-graph/8/input.js
const foo = async () => {
  'use strict'
  'use server'
}

const bar = async () => {
  const x = 1

  // prettier-ignore
  'use server'
}
